--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="favicon" href='./img/favicon.ico' >
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css" />
     <!-- <link rel="stylesheet" href="./css/style.main.css" /> -->
-    <link rel="stylesheet" href="./css/style.production.css" />
+    <!-- <link rel="stylesheet" href="./css/style.production.css" /> -->
 </head>
 <body>
     <header>
@@ -39,7 +40,8 @@
             <div class="content__container">
                 <!-- conteent sections -->
                 <div class="content__container--image">
-                    <img src="https://via.placeholder.com/350x300" alt="This is just a placeeholder">
+                    <!-- <img src="https://via.placeholder.com/350x300" alt="This is just a placeeholder"> -->
+                    <img  src="./img/cover-photo.png" alt="This is just a placeeholder">
                 </div>
                 
                 <div class="content__container--copy">
