This commit adds logo/main image

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
 </head>
 <body>
     <header>
-        <a href="/">
-            <h1 class="logo">Brian Thomas</h1>
+        <a class="logo__container" href="/">
+            <!-- <h1 class="logo">Brian Thomas</h1> -->
+            <img class="logo"  src="./img/logo-text.jpg" alt="Logo text spelling Brian">
         </a>
         
+        <div class="nav-bg">&nbsp;</div>
         <nav class="navigation">
             <ul role="menubar">
                 <li role="presentation">
@@ -41,7 +43,7 @@
                 <!-- conteent sections -->
                 <div class="content__container--image">
                     <!-- <img src="https://via.placeholder.com/350x300" alt="This is just a placeeholder"> -->
-                    <img  src="./img/cover-photo.png" alt="This is just a placeeholder">
+                    <img style="opacity: .75;" src="./img/cover-photo.png" alt="This is just a placeeholder">
                 </div>
                 
                 <div class="content__container--copy">
@@ -59,11 +61,11 @@
         </section>
     </main>
     <footer class="footer">
-        <div>
+        <div class="footer__container">
             <!-- contact copy -->
             <p class="footer__headline">Find me on</p>
             <!-- contact icons container -->
-            <div>
+            <div class="footer__wrapper">
                 <!-- icons -->
                 <a href="https://github.com/joyreacher" target="_blank" ><img role="navigation" src="./img/icon__github.svg" alt="Github profile" ></a>
                 <a href="https://www.linkedin.com/in/joyreacher/" target="_blank"><img src="./img/icon__linkin.svg" alt="Linkedin profile"></a>
