--- a/about.html
+++ b/about.html
@@ -62,6 +62,9 @@
                         </tr>
                     </tbody>
                 </table>    
+                <div class="cv">
+                    <button class="cv__btn">Download my CV</button>
+                </div>
                 <div class="illustration">
                     <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 1225.421 825.633">
                         <g id="Sky">
