Validation error removed -- new imgs

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <a class="logo__container" href="/">
             <!-- <h1 class="logo">Brian Thomas</h1> -->
-            <img class="logo"  src="./img/logo-text.jpg" alt="Logo text spelling Brian">
+            <img class="logo"  src="./img/logo.jpg" alt="Logo text spelling Brian">
         </a>
         
         <div class="nav-bg">&nbsp;</div>
@@ -43,7 +43,7 @@
                 <!-- conteent sections -->
                 <div class="content__container--image">
                     <!-- <img src="https://via.placeholder.com/350x300" alt="This is just a placeeholder"> -->
-                    <img style="opacity: .75;" src="./img/cover-photo.png" alt="This is just a placeeholder">
+                    <img style="opacity: .75;" src="./img/cover-photo-main.jpg" alt="This is just a placeeholder">
                 </div>
                 
                 <div class="content__container--copy">
@@ -67,7 +67,7 @@
             <!-- contact icons container -->
             <div class="footer__wrapper">
                 <!-- icons -->
-                <a href="https://github.com/joyreacher" target="_blank" ><img role="navigation" src="./img/icon__github.svg" alt="Github profile" ></a>
+                <a href="https://github.com/joyreacher" target="_blank" ><img src="./img/icon__github.svg" alt="Github profile" ></a>
                 <a href="https://www.linkedin.com/in/joyreacher/" target="_blank"><img src="./img/icon__linkin.svg" alt="Linkedin profile"></a>
                 <a href="https://twitter.com/Brian37626646" target="_blank"><img src="./img/icon__twitter.svg" alt="Twitter profile"></a>
             </div>
