This commit adds markup validation

--- a/about.html
+++ b/about.html
@@ -51,11 +51,14 @@
     
     <main class="main--about">
         <section class="about--content__wrapper">
+            <h2>More about me.</h2>
             <div  class="about--content__container">
                 <table class="skills">
                     <thead>
                         <tr>
-                            <th class="table__primary--header" colspan="4">Brian at a glance</th>
+                            <th class="table__primary--header" colspan="4">
+                                Brian at a glance
+                            </th>
                         </tr>
                     </thead>
                     <tbody>
@@ -239,7 +242,7 @@
                                     transform="translate(377.94 78.957)" fill="#103b52" />
                                 <rect id="Rectangle_21-32" data-name="Rectangle 21" width="6.317" height="7.369"
                                     transform="translate(387.415 78.957)" fill="#103b52" />
-                                <rect id="light-switch-4" data-name="Rectangle 21" width="6.317" height="7.369"
+                                <rect  class="light-switch-4" data-name="Rectangle 21" width="6.317" height="7.369"
                                     transform="translate(396.89 78.957)" fill="#103b52" />
                                 <rect id="Rectangle_21-34" data-name="Rectangle 21" width="6.317" height="7.369"
                                     transform="translate(377.94 91.59)" fill="#103b52" />
@@ -1078,7 +1081,7 @@
                                     transform="translate(-308.736 -433.522)" fill="#322e2e" />
                                 <rect id="Rectangle_23" data-name="Rectangle 23" width="10.693" height="14.257"
                                     transform="translate(3.914 6.66)" fill="#404040" />
-                                <rect id="light-switch-2" data-name="Rectangle 23" width="10.693" height="14.257"
+                                <rect  class="light-switch-2" data-name="Rectangle 23" width="10.693" height="14.257"
                                     transform="translate(19.36 6.66)" fill="#eae0d5" />
                                 <rect id="Rectangle_23-3" data-name="Rectangle 23" width="10.693" height="14.257"
                                     transform="translate(34.805 6.66)" fill="#404040" />
@@ -1862,7 +1865,7 @@
                                     transform="translate(110.102 240.12)" fill="#2e2e2e" />
                                 <rect id="Rectangle_23-348" data-name="Rectangle 23" width="10.693" height="14.257"
                                     transform="translate(110.102 12)" fill="#2e2e2e" />
-                                <rect id="light-switch-2" data-name="Rectangle 23" width="10.693" height="14.257"
+                                <rect  class="light-switch-2" data-name="Rectangle 23" width="10.693" height="14.257"
                                     transform="translate(110.102 32.199)" fill="#eae0d5" />
                                 <rect id="Rectangle_23-350" data-name="Rectangle 23" width="10.693" height="14.257"
                                     transform="translate(88.716 12)" fill="#2e2e2e" />
@@ -1903,7 +1906,7 @@
                                     transform="translate(6.588 59.543)" fill="#2e2e2e" />
                                 <rect id="Rectangle_23-361" data-name="Rectangle 23" width="10.693" height="14.257"
                                     transform="translate(25.598 59.543)" fill="#2e2e2e" />
-                                <rect id="light-switch-4" data-name="Rectangle 23" width="10.693" height="14.257"
+                                <rect  class="light-switch-4" data-name="Rectangle 23" width="10.693" height="14.257"
                                     transform="translate(44.608 59.543)" fill="#2e2e2e" />
                                 <rect id="Rectangle_23-363" data-name="Rectangle 23" width="10.693" height="14.257"
                                     transform="translate(63.618 59.543)" fill="#2e2e2e" />
@@ -2115,7 +2118,7 @@
             <!-- contact icons container -->
             <div class="footer__wrapper">
                 <!-- icons -->
-                <a href="https://github.com/joyreacher" target="_blank" ><img role="navigation" src="./img/icon__github.svg" alt="Github profile" ></a>
+                <a href="https://github.com/joyreacher" target="_blank" ><img src="./img/icon__github.svg" alt="Github profile" ></a>
                 <a href="https://www.linkedin.com/in/joyreacher/" target="_blank"><img src="./img/icon__linkin.svg" alt="Linkedin profile"></a>
                 <a href="https://twitter.com/Brian37626646" target="_blank"><img src="./img/icon__twitter.svg" alt="Twitter profile"></a>
             </div>
