--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,7 @@
     </header>
     <main>
         <section class="content__wrapper">
+            <h2>Contact Me</h2>
             <div class="content__container">
                 
                 
@@ -90,7 +91,7 @@
             <!-- contact icons container -->
             <div class="footer__wrapper">
                 <!-- icons -->
-                <a href="https://github.com/joyreacher" target="_blank" ><img role="navigation" src="./img/icon__github.svg" alt="Github profile" ></a>
+                <a href="https://github.com/joyreacher" target="_blank" ><img src="./img/icon__github.svg" alt="Github profile" ></a>
                 <a href="https://www.linkedin.com/in/joyreacher/" target="_blank"><img src="./img/icon__linkin.svg" alt="Linkedin profile"></a>
                 <a href="https://twitter.com/Brian37626646" target="_blank"><img src="./img/icon__twitter.svg" alt="Twitter profile"></a>
             </div>
