--- a/works.html
+++ b/works.html
@@ -60,7 +60,7 @@
                     <div class="project__card">
                         <img class="project__card--image" src="https://via.placeholder.com/650x400" alt="The project image">
                         <div class="project__copy">
-                            <h1 class="project__copy--title">Title</h1>
+                            <h2 class="project__copy--title">Title</h2>
                             <p class="project__copy--description">Description</p>
                             <a class="project__copy--link" href="#">Link to project</a>
                         </div>
@@ -69,7 +69,7 @@
                     <div class="project__card">
                         <img class="project__card--image" src="https://via.placeholder.com/650x400" alt="The project image">
                         <div class="project__copy">
-                            <h1 class="project__copy--title">Title</h1>
+                            <h2 class="project__copy--title">Title</h2>
                             <p class="project__copy--description">Description</p>
                             <a class="project__copy--link" href="#">Link to project</a>
                         </div>
@@ -78,7 +78,7 @@
                     <div class="project__card">
                         <img class="project__card--image" src="https://via.placeholder.com/650x400" alt="The project image">
                         <div class="project__copy">
-                            <h1 class="project__copy--title">Title</h1>
+                            <h2 class="project__copy--title">Title</h2>
                             <p class="project__copy--description">Description</p>
                             <a class="project__copy--link" href="#">Link to project</a>
                         </div>
@@ -87,7 +87,7 @@
                     <div class="project__card">
                         <img class="project__card--image" src="https://via.placeholder.com/650x400" alt="The project image">
                         <div class="project__copy">
-                            <h1 class="project__copy--title">Title</h1>
+                            <h2 class="project__copy--title">Title</h2>
                             <p class="project__copy--description">Description</p>
                             <a class="project__copy--link" href="#">Link to project</a>
                         </div>
@@ -96,7 +96,7 @@
                     <div class="project__card">
                         <img class="project__card--image" src="https://via.placeholder.com/650x400" alt="The project image">
                         <div class="project__copy">
-                            <h1 class="project__copy--title">Title</h1>
+                            <h2 class="project__copy--title">Title</h2>
                             <p class="project__copy--description">Description</p>
                             <a class="project__copy--link" href="#">Link to project</a>
                         </div>
@@ -105,7 +105,7 @@
                     <div class="project__card">
                         <img class="project__card--image" src="https://via.placeholder.com/650x400" alt="The project image">
                         <div class="project__copy">
-                            <h1 class="project__copy--title">Title</h1>
+                            <h2 class="project__copy--title">Title</h2>
                             <p class="project__copy--description">Description</p>
                             <a class="project__copy--link" href="#">Link to project</a>
                         </div>
@@ -125,7 +125,7 @@
             <!-- contact icons container -->
             <div class="footer__wrapper">
                 <!-- icons -->
-                <a href="https://github.com/joyreacher" target="_blank" ><img role="navigation" src="./img/icon__github.svg" alt="Github profile" ></a>
+                <a href="https://github.com/joyreacher" target="_blank" ><img src="./img/icon__github.svg" alt="Github profile" ></a>
                 <a href="https://www.linkedin.com/in/joyreacher/" target="_blank"><img src="./img/icon__linkin.svg" alt="Linkedin profile"></a>
                 <a href="https://twitter.com/Brian37626646" target="_blank"><img src="./img/icon__twitter.svg" alt="Twitter profile"></a>
             </div>
