--- a/contact.html
+++ b/contact.html
@@ -32,16 +32,16 @@
             <nav class="navigation__container">
                 <ul role="menubar" class="navigation__list">
                     <li role="presentation" class="navigation__item">
-                        <a class="navigation__link" role="menuitem" href="/">Home</a>
+                        <a class="navigation__link" role="menuitem" href="https://joyreacher.github.io/portfolio-website">Home</a>
                     </li>
                     <li class="navigation__item">
-                        <a class="navigation__link" role="menuitem" href="/works.html">Works</a>
+                        <a class="navigation__link" role="menuitem" href="https://joyreacher.github.io/portfolio-website/works.html">Works</a>
                     </li>
                     <li class="navigation__item">
-                        <a class="navigation__link" role="menuitem" href="/about.html">About me</a>
+                        <a class="navigation__link" role="menuitem" href="https://joyreacher.github.io/portfolio-website/about.html">About me</a>
                     </li>
                     <li class="navigation__item">
-                        <a class="navigation__link" role="menuitem" href="/contact.html">Contact</a>
+                        <a class="navigation__link" role="menuitem" href="https://joyreacher.github.io/portfolio-website/contact.html">Contact</a>
                     </li>
                 </ul>
             </nav>
