This commit fixes logo link

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <a class="logo__container" href="/">
+        <a class="logo__container" href="https://joyreacher.github.io/portfolio-website">
             <h1 class="logo">Brian Thomas</h1>
             <!-- <img class="logo"  src="./img/logo.jpg" alt="Logo text spelling Brian"> -->
         </a>
