--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href='./img/favicon.ico' >
+    <link rel="stylesheet" href="https://use.typekit.net/tpr1nqj.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css" />
     <!-- <link rel="stylesheet" href="./css/style.main.css" /> -->
