This commit gives more control over headline class

--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
   </header>
     <main class="main__contact">
         <section class="main__contact--wrapper">
-            <h2 class="contact__headline">Contact Me</h2>
+            <h2 class="headline">Contact Me</h2>
             <div class="main__contact--container">
                 
                   <div class="contact__info">
