--- a/works.html
+++ b/works.html
@@ -53,7 +53,7 @@
   </header>
     <main class="main__works">
         <section class="main__works--wrapper">
-            <h2 class="contact__headline">See what I've been up to.</h2>
+            <h2 class="headline">See what I've been up to.</h2>
             <!-- content wrapper -->
             <div class="main__works--container">
                 <!-- conteent sections -->
