--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
     
     <main class="main__about">
         <section class="main__about--wrapper">
-            <h2 class="about__headline">More about me.</h2>
+            <h2 class="headline">More about me.</h2>
             <div  class="main__about--container">
               <div class="about__copy">
                 I am an experienced teacher’s assistant and professional line cook. I also have an extensive background as a customer service specialist where I learned to become positive, productive and detailed in my work. I am also an experienced sound engineer with a passion for technology and beautiful UIs.
@@ -83,10 +83,7 @@
                             <td>React</td>
                         </tr>
                     </tbody>
-                </table>    
-                <div class="about__cv">
-                    <button class="about__cv--btn">Download my CV</button>
-                </div>
+                </table>                 
                 <div class="about__illustration">
                     <svg xmlns="http://www.w3.org/2000/svg"  viewBox="0 0 1225.421 825.633">
                         <g id="Sky">
