this commit adds target for table headers

--- a/about.html
+++ b/about.html
@@ -69,16 +69,16 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <th>Experience:</th>
+                            <th class="about__skills--row-header">Experience:</th>
                             <td>Graduate from Aims Community College</td>
                             <td>Current student a Career Foundry</td>
                         </tr>
                         <tr>
-                            <th>Languages:</th>
+                            <th class="about__skills--row-header">Languages:</th>
                             <td colspan="2">HTML, CSS, Javascript, PHP</td>
                         </tr>
                         <tr>
-                            <th>Skills:</th>
+                            <th class="about__skills--row-header">Skills:</th>
                             <td>Wordpress</td>
                             <td>React</td>
                         </tr>
