This commit has a refactored class

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <!-- content sections -->
 
                   <div class="home__img">
-                    <img class="content__main-img" src="./img/cover-photo-main.jpg" alt="This is just a placeeholder">
+                    <img class="home__cover-photo" src="./img/cover-photo-main.jpg" alt="This is just a placeeholder">
                   </div>
                   <div class="home__copy">
                       <!-- copy container -->
