--- a/works.html
+++ b/works.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Brian Thomas Portfolio | Works</title>
+    <title>Brian Thomas | Works</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href='./img/favicon.ico' >
