--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                           <h1 class="home__large">Hello World</h1>
                           <h2>My name is Brian I am a full stack developer based in Colorado with a passion for creating web apps with unique UI animations</h2>
                           <!-- cta -->
-                          <button class="home__cta" href="#">My work</button>
+                          <button class="home__cta" >My work</button>
                       </div>
                   </div>
 
