--- a/contact.html
+++ b/contact.html
@@ -8,10 +8,8 @@
     <link rel="icon" href='./img/favicon.ico' >
     <link rel="stylesheet" href="https://use.typekit.net/tpr1nqj.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&display=swap" rel="stylesheet">
-    <!-- <link rel="stylesheet" href="./css/styles.main.css" /> -->
-    <!-- <link rel="stylesheet" href="./css/styles.css" /> -->
-    <!-- <link rel="stylesheet" href="./css/style.main.css" /> -->
-    <link rel="stylesheet" href="./css/style.production.css" />
+    <link rel="stylesheet" href="./css/styles.main.css" />
+    <!-- <link rel="stylesheet" href="./css/style.production.css" /> -->
 </head>
 <body>
   <header class="header">
