This commit adds headline breaks in HTML

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@
   </header>
     <main class="main__contact">
         <section class="main__contact--wrapper">
-            <h2 class="headline">Get in touch.</h2>
+            <h2 class="headline">Get<br> in <br>touch.</h2>
             <div class="main__contact--container">
                 
                   <div class="contact__info">
