--- a/works.html
+++ b/works.html
@@ -51,7 +51,7 @@
   </header>
     <main class="main__works">
         <section class="main__works--wrapper">
-            <h2 class="headline">See what I've been up to.</h2>
+            <h2 class="headline">See what <br> I've been up <br> to.</h2>
             <!-- content wrapper -->
             <div class="main__works--container">
                 <!-- conteent sections -->
