This commit adds a class to homepage description

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                       <!-- copy container -->
                       <div class="home__inner">
                           <h1 class="home__large">Hello World</h1>
-                          <h2>My name is Brian I am a full stack developer based in Colorado with a passion for creating web apps with unique UI animations</h2>
+                          <h2 class="home__description">My name is Brian I am a full stack developer based in Colorado with a passion for creating web apps with unique UI animations</h2>
                           <!-- cta -->
                           <button class="home__cta" >My work</button>
                       </div>
