--- a/about.html
+++ b/about.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="./css/style.production.css" />
 </head>
 <body>
-  <header class="header position-top">
-    <a class="header__logo" href="/">
+  <header class="header">
+    <a class="header__logo" href="https://joyreacher.github.io/portfolio-website/">
         <!-- <h1 class="logo">Brian Thomas</h1> -->
         <img class="logo"  src="./img/Logo-3.svg" alt="Logo for Brian Thomas">
         
@@ -36,13 +36,13 @@
                     <button class="navigation__cv-download">Download CV</button>
                 </li>
                 <li class="navigation__item">
-                    <a class="navigation__link" role="menuitem" href="./works.html">Works</a>
+                    <a class="navigation__link" role="menuitem" href="https://joyreacher.github.io/portfolio-website/works.html">Works</a>
                 </li>
                 <li class="navigation__item">
-                    <a class="navigation__link" role="menuitem" href="./about.html">About me</a>
+                    <a class="navigation__link" role="menuitem" href="https://joyreacher.github.io/portfolio-website/about.html">About me</a>
                 </li>
                 <li class="navigation__item">
-                    <a class="navigation__link" role="menuitem" href="./contact.html">Contact</a>
+                    <a class="navigation__link" role="menuitem" href="https://joyreacher.github.io/portfolio-website/contact.html">Contact</a>
                 </li>
             </ul>
         </nav>
