--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./css/style.production.css" />
 </head>
 <body>
-  <header class="header">
+  <header class="header position-top">
     <a class="header__logo" href="https://joyreacher.github.io/portfolio-website/">
         <!-- <h1 class="logo">Brian Thomas</h1> -->
         <img class="logo"  src="./img/Logo-3.svg" alt="Logo for Brian Thomas">
